--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,14 +14,15 @@
   weight = 20
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 30
+  name = "Skills"
+  url = "#niket_skills"
+  weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 40
+  name = "Experience"
+  url = "#experience"
+  weight = 20
+
 
 [[main]]
   name = "Publications"
