--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -22,19 +22,24 @@
   name = "Experience"
   url = "#experience"
   weight = 40
+  
+[[main]]
+  name = "Posts"
+  url = "#posts"
+  weight = 50
 
 
 [[main]]
   name = "Publications"
   url = "#publications"
-  weight = 50
+  weight = 60
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 70
 
 [[main]]
    name = "CV"
    url = "files/cv.pdf"
-   weight = 70
+   weight = 80
