--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -28,18 +28,23 @@
   url = "#posts"
   weight = 50
 
+[[main]]
+  name = "Projects"
+  url = "#projects"
+  weight = 60
+
 
 [[main]]
   name = "Publications"
   url = "#publications"
-  weight = 60
+  weight = 70
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 70
+  weight = 80
 
 [[main]]
    name = "CV"
    url = "files/cv.pdf"
-   weight = 80
+   weight = 90
