--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -73,7 +73,7 @@ office_hours = """"""
 contact_links = [
   {icon = "linkedin-in", icon_pack = "fab", name = "DM Me", link = "https://www.linkedin.com/in/aniket-didolkar-7a9b8912a/"},
   {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:live:9042c3836d4cb607"},
-  {icon = "instagram", icon_pack = "fab", name = "Follow Me", link = "https://www.instagram.com/stochasticvector"} 
+  {icon = "instagram", icon_pack = "fab", name = "Follow Me", link = "https://www.instagram.com/iamagaussiankid/"} 
   # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
   ]
 
